infrastructure/k8s/production/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lumines
  labels:
    name: lumines
    app: lumines
    environment: production
